--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,13 @@
     <title>React App</title>
   </head>
   <body>
+  <h1>Assignment 2</h1>
+  <ul>
+    <li><a href="a2/practice/index.html">HTML Practice</a></li>
+    <li><a href="a2/twitter/navigation.html">Twitter clone</a></li>
+    <li><a href="a2/practice/iframe/index.html">Iframe Practice</a></li>
+    <li><a href="a2/practice/svg/index.html">SVG Practice</a></li>
+  </ul>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
@@ -36,8 +43,5 @@
       You can add webfonts, meta tags, or analytics to this file.
       The build step will place the bundled scripts into the <body> tag.
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
