--- a/public/index.html
+++ b/public/index.html
@@ -29,10 +29,12 @@
   <body>
   <h1>Assignment 2</h1>
   <ul>
-    <li><a href="a2/practice/index.html">HTML Practice</a></li>
-    <li><a href="a2/twitter/navigation.html">Twitter clone</a></li>
-    <li><a href="a2/practice/iframe/index.html">Iframe Practice</a></li>
-    <li><a href="a2/practice/svg/index.html">SVG Practice</a></li>
+    <li><a href="a3/practice/index.html">A2 - HTML Practice</a></li>
+    <li><a href="a3/practice/iframe/index.html">A2 - Iframe Practice</a></li>
+    <li><a href="a3/practice/svg/index.html">A2 - SVG Practice</a></li>
+    <li><a href="a3/practice/css/index.html">A3 - CSS Practice</a></li>
+    <li><a href="a3/twitter/navigation.html">A3 - Twitter clone</a></li>
+    <li><a href="a3/challenge/index.html">A3 Challenge</a></li>
   </ul>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
