--- a/public/a3/twitter/bookmarks/bookmarks.html
+++ b/public/a3/twitter/bookmarks/bookmarks.html
@@ -5,7 +5,7 @@
     <title>Bookmarks</title>
     <script src="https://kit.fontawesome.com/444d125d91.js" crossorigin="anonymous"></script>
 
-    <link href="/public/a3/twitter/index.css" rel="stylesheet" type="text/css">
+<!--    <link href="/public/a3/twitter/index.css" rel="stylesheet" type="text/css">-->
     <link href="bookmarks.css" rel="stylesheet" type="text/css">
 </head>
 <body>
@@ -51,33 +51,33 @@
         </div>
         <div class="wd-bookmarks-G">
             <a href="#">
-               <div class="wd-bookmarks-G-div">
+                <div class="wd-bookmarks-G-div">
                     <i class="far fa-comment"></i>
-                   <span class="wd-bookmarks-G-count">
+                    <span class="wd-bookmarks-G-count">
                        22
                    </span>
-               </div>
+                </div>
             </a>
             <a href="#">
-               <div class="wd-bookmarks-G-div">
+                <div class="wd-bookmarks-G-div">
                     <i class="fas fa-retweet"></i>
-                   <span class="wd-bookmarks-G-count">
+                    <span class="wd-bookmarks-G-count">
                        9
                    </span>
                 </div>
             </a>
             <a href="#">
-               <div class="wd-bookmarks-G-div font-color-red">
-                   <i class="fas fa-heart"></i>
-                   <span class="wd-bookmarks-G-count">
+                <div class="wd-bookmarks-G-div font-color-red">
+                    <i class="fas fa-heart"></i>
+                    <span class="wd-bookmarks-G-count">
                        22
                    </span>
-            </div>
+                </div>
             </a>
             <a href="#">
-               <div class="wd-bookmarks-G-div">
-                   <i class="fas fa-share"></i>
-            </div>
+                <div class="wd-bookmarks-G-div">
+                    <i class="fas fa-share"></i>
+                </div>
             </a>
 
         </div>
@@ -96,7 +96,8 @@
             <span class="wd-bookmarks-C-handle">@bruce_nita . Aug 19</span>
         </div>
         <div class="wd-bookmarks-D">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sit amet enim viverra, molestie mauris quis, rutrum quam. In metus ante, ultricies in eleifend ut.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sit amet enim viverra,
+            molestie mauris quis, rutrum quam. In metus ante, ultricies in eleifend ut.
         </div>
         <div class="wd-bookmarks-EF">
             <div class="wd-bookmarks-E">
@@ -109,7 +110,9 @@
                 </div>
                 <div class="wd-bookmarks-F-desc">
 
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec posuere varius eros vehicula mollis. Proin tristique efficitur diam at bibendum. Sed at vestibulum justo, quis.
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec posuere varius
+                    eros vehicula mollis. Proin tristique efficitur diam at bibendum. Sed at
+                    vestibulum justo, quis.
                 </div>
             </div>
         </div>
