--- a/public/a3/twitter/explore/explore.html
+++ b/public/a3/twitter/explore/explore.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Explore</title>
     <script src="https://kit.fontawesome.com/444d125d91.js" crossorigin="anonymous"></script>
-    <link href="/public/a3/twitter/index.css" rel="stylesheet" type="text/css">
+<!--    <link href="/public/a3/twitter/index.css" rel="stylesheet" type="text/css">-->
     <link href="explore.css" rel="stylesheet" type="text/css">
 </head>
 <body>
