--- a/public/a3/twitter/explore/explore.html
+++ b/public/a3/twitter/explore/explore.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <title>Explore</title>
     <script src="https://kit.fontawesome.com/444d125d91.js" crossorigin="anonymous"></script>
-<!--    <link href="/public/a3/twitter/index.css" rel="stylesheet" type="text/css">-->
     <link href="explore.css" rel="stylesheet" type="text/css">
 </head>
 <body>
@@ -63,7 +62,7 @@
 
 <div class="wd-C">
     <i class="fas fa-ellipsis-h wd-C-img"></i>
-    <div class = wd-topic>
+    <div class=wd-topic>
         Sports Trending
     </div>
     <div class="wd-subject">
@@ -76,7 +75,7 @@
 
 <div class="wd-C">
     <i class="fas fa-ellipsis-h wd-C-img"></i>
-    <div class = wd-topic>
+    <div class=wd-topic>
         Trending in Science
     </div>
     <div class="wd-subject">
@@ -90,21 +89,22 @@
 <div class="wd-D">
     <img src="../images/spike.png"
          class="wd-D-img">
-    <div class = wd-topic>
+    <div class=wd-topic>
         <span class="wd-topic-author">
             Spike <i class="fas fa-check-circle"></i>
         </span>
         . Yesterday
     </div>
     <div class="wd-D-subject">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin tincidunt ultrices ante at suscipit.
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin tincidunt ultrices ante at
+        suscipit.
     </div>
 </div>
 
 <div class="wd-D">
     <img src="../images/primo.png"
          class="wd-D-img">
-    <div class = wd-topic>
+    <div class=wd-topic>
         <span class="wd-topic-author">
             El Primo <i class="fas fa-check-circle"></i>
         </span>
@@ -112,24 +112,26 @@
     </div>
     <div class="wd-D-subject">
 
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ut eros molestie, aliquam felis vitae, rutrum nisi. Ut aliquet sollicitudin.
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ut eros molestie, aliquam
+        felis vitae, rutrum nisi. Ut aliquet sollicitudin.
     </div>
 </div>
 
 <div class="wd-D">
     <img src="../images/leon.png"
          class="wd-D-img">
-    <div class = wd-topic>
+    <div class=wd-topic>
         LEON . LIVE
     </div>
     <div class="wd-D-subject">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ut eros molestie, aliquam felis vitae, rutrum nisi. Ut aliquet sollicitudin.
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ut eros molestie, aliquam
+        felis vitae, rutrum nisi. Ut aliquet sollicitudin.
     </div>
 </div>
 
 <div class="wd-C">
     <i class="fas fa-ellipsis-h wd-C-img"></i>
-    <div class = wd-topic>
+    <div class=wd-topic>
         Trending in Entertainment
     </div>
     <div class="wd-subject">
@@ -143,11 +145,12 @@
 <div class="wd-D">
     <img src="../images/surge.png"
          class="wd-D-img">
-    <div class = wd-topic>
+    <div class=wd-topic>
         SURGE-19 . LIVE
     </div>
     <div class="wd-D-subject">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ut eros molestie, aliquam felis vitae, rutrum nisi. Ut aliquet sollicitudin.
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ut eros molestie, aliquam
+        felis vitae, rutrum nisi. Ut aliquet sollicitudin.
     </div>
 </div>
 
