--- a/public/a4/practice/bootstrap/index.html
+++ b/public/a4/practice/bootstrap/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <title>Bootstrap</title>
     <link href="../css/index.css" rel="stylesheet"/>
-    <link href="../../../vendors/bootstrap/css/bootstrap.css" rel="stylesheet"/>
+<!--    <link href="../../../vendors/bootstrap/css/bootstrap.css" rel="stylesheet"/>-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
+
     <link href="styles.css" rel="stylesheet"/>
-    <link href="../../../vendors/fontawesome/css/all.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+<!--    <link href="../../../vendors/fontawesome/css/all.css" rel="stylesheet">-->
 </head>
 <body>
 <div class="container">
