--- a/public/a4/twitter/explore/explore.html
+++ b/public/a4/twitter/explore/explore.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Explore</title>
-    <link href="../../../vendors/bootstrap/css/bootstrap.css" rel="stylesheet"/>
-    <link href="../../../vendors/fontawesome/css/all.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <link href="explore.css" rel="stylesheet" type="text/css">
 </head>
 <body class="container wd-body">
