--- a/public/a4/challenge/bootstrap/explore/explore.html
+++ b/public/a4/challenge/bootstrap/explore/explore.html
@@ -3,8 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Explore</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css"
+          rel="stylesheet"
+          integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF"
+          crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
+          integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm"
+          crossorigin="anonymous">
     <link href="explore.css" rel="stylesheet" type="text/css">
 </head>
 <body class="container wd-body">
@@ -142,7 +147,11 @@
             <div class="wd-B">
                 <ul class="nav nav-tabs mt-2 wd-nav">
                     <li class="nav-item">
-                        <a class="nav-link wd-tweet-nav-item" href="for-you.html">For You</a>
+                        <a class="nav-link wd-tweet-nav-item" href="for-you.html">
+                            <span class="wd-tweet-nav-item-active">
+                                For You
+                            </span>
+                        </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link wd-tweet-nav-item" href="trending.html">Trending</a>
@@ -154,15 +163,13 @@
                         <a class="nav-link wd-tweet-nav-item" href="news.html">News</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link wd-tweet-nav-item" href="sports.html">Sports</a>
+                        <a class="nav-link d-none d-md-block wd-tweet-nav-item" href="sports.html">Sports</a>
                     </li>
 
                     <li class="nav-item ">
-                        <a class="nav-link d-none d-md-block wd-tweet-nav-item"
+                        <a class="nav-link d-none d-md-block d-lg-none d-xl-block wd-tweet-nav-item"
                            href="entertainment.html">
-                            <span class="wd-tweet-nav-item-active">
-                                Entertainment
-                            </span>
+                            Entertainment
                         </a>
                     </li>
                 </ul>
