--- a/public/index.html
+++ b/public/index.html
@@ -26,45 +26,49 @@
     -->
     <title>React App</title>
 </head>
-<body>
-    <h3>Assignment 2</h3>
-    <ul>
-        <li><a href="a2/practice/index.html">A2 - HTML Practice</a></li>
-        <li><a href="a2/practice/iframe/index.html">A2 - Iframe Practice</a></li>
-        <li><a href="a2/practice/svg/index.html">A2 - SVG Practice</a></li>
-        <li><a href="a2/twitter/navigation.html">A2 - Twitter clone</a></li>
-    </ul>
-    <h3>Assignment 3</h3>
-    <ul>
-        <li><a href="a3/practice/css/index.html">A3 - CSS Practice</a></li>
-        <li><a href="a3/twitter/navigation.html">A3 - Twitter clone</a></li>
-        <li><a href="a3/challenge/index.html">A3 Challenge</a></li>
-    </ul>
-    <h3>Assignment 4</h3>
-    <ul>
-        <li><a href="a4/practice/bootstrap/index.html">A4 - Bootstrap</a></li>
-        <li><a href="a4/twitter/explore/explore.html">A4 - Twitter Clone</a></li>
-        <li><a href="a4/challenge/bootstrap/explore/explore.html">A4 - Challenge</a></li>
-    </ul>
-    <h3>Assignment 5</h3>
-    <ul>
-        <li><a href="a5/practice/js/index.html">A5 - JavaScript</a></li>
-        <li><a href="a5/build/ExploreScreen/index.html">A5 - Build - Explore</a></li>
-        <li><a href="a5/build/HomeScreen/index.html">A5 - Challenge - HomeScreen</a></li>
-    </ul>
+    <body>
+        <noscript>You need to enable JavaScript to run this app.</noscript>
+        <div id="root"></div>
 
-<noscript>You need to enable JavaScript to run this app.</noscript>
-<div id="root"></div>
-<!--
-  This HTML file is a template.
-  If you open it directly in the browser, you will see an empty page.
+        <h1>Non React.js Assignments</h1>
+        <h3>Assignment 2</h3>
+        <ul>
+            <li><a href="/a2/practice/index.html">A2 - HTML Practice</a></li>
+            <li><a href="/a2/practice/iframe/index.html">A2 - Iframe Practice</a></li>
+            <li><a href="/a2/practice/svg/index.html">A2 - SVG Practice</a></li>
+            <li><a href="/a2/twitter/navigation.html">A2 - Twitter clone</a></li>
+        </ul>
+        <h3>Assignment 3</h3>
+        <ul>
+            <li><a href="/a3/practice/css/index.html">A3 - CSS Practice</a></li>
+            <li><a href="/a3/twitter/navigation.html">A3 - Twitter clone</a></li>
+            <li><a href="/a3/challenge/index.html">A3 Challenge</a></li>
+        </ul>
+        <h3>Assignment 4</h3>
+        <ul>
+            <li><a href="/a4/practice/bootstrap/index.html">A4 - Bootstrap</a></li>
+            <li><a href="/a4/twitter/explore/explore.html">A4 - Twitter Clone</a></li>
+            <li><a href="/a4/challenge/bootstrap/explore/explore.html">A4 - Challenge</a></li>
+        </ul>
+        <h3>Assignment 5</h3>
+        <ul>
+            <li><a href="/a5/practice/js/index.html">A5 - JavaScript</a></li>
+            <li><a href="/a5/practice/js/todos/index.html">A5 - Todos</a></li>
+            <li><a href="/a5/build/ExploreScreen/index.html">A5 - Build - Explore</a></li>
+            <li><a href="/a5/build/HomeScreen/index.html">A5 - Challenge - HomeScreen</a></li>
+        </ul>
 
-  You can add webfonts, meta tags, or analytics to this file.
-  The build step will place the bundled scripts into the <body> tag.
 
-  To begin the development, run `npm start` or `yarn start`.
-  To create a production bundle, use `npm run build` or `yarn build`.
--->
+        <!--
+          This HTML file is a template.
+          If you open it directly in the browser, you will see an empty page.
+
+          You can add webfonts, meta tags, or analytics to this file.
+          The build step will place the bundled scripts into the <body> tag.
+
+          To begin the development, run `npm start` or `yarn start`.
+          To create a production bundle, use `npm run build` or `yarn build`.
+        -->
 
 </body>
 </html>
