--- a/public/index.html
+++ b/public/index.html
@@ -10,65 +10,11 @@
             content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png"/>
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <title>Twitter Clone</title>
 </head>
-    <body>
-        <noscript>You need to enable JavaScript to run this app.</noscript>
-        <div id="root"></div>
-
-        <h1>Non React.js Assignments</h1>
-        <h3>Assignment 2</h3>
-        <ul>
-            <li><a href="/a2/practice/index.html">A2 - HTML Practice</a></li>
-            <li><a href="/a2/practice/iframe/index.html">A2 - Iframe Practice</a></li>
-            <li><a href="/a2/practice/svg/index.html">A2 - SVG Practice</a></li>
-            <li><a href="/a2/twitter/navigation.html">A2 - Twitter clone</a></li>
-        </ul>
-        <h3>Assignment 3</h3>
-        <ul>
-            <li><a href="/a3/practice/css/index.html">A3 - CSS Practice</a></li>
-            <li><a href="/a3/twitter/navigation.html">A3 - Twitter clone</a></li>
-            <li><a href="/a3/challenge/index.html">A3 Challenge</a></li>
-        </ul>
-        <h3>Assignment 4</h3>
-        <ul>
-            <li><a href="/a4/practice/bootstrap/index.html">A4 - Bootstrap</a></li>
-            <li><a href="/a4/twitter/explore/explore.html">A4 - Twitter Clone</a></li>
-            <li><a href="/a4/challenge/bootstrap/explore/explore.html">A4 - Challenge</a></li>
-        </ul>
-        <h3>Assignment 5</h3>
-        <ul>
-            <li><a href="/a5/practice/js/index.html">A5 - JavaScript</a></li>
-            <li><a href="/a5/practice/js/todos/index.html">A5 - Todos</a></li>
-            <li><a href="/a5/build/ExploreScreen/index.html">A5 - Build - Explore</a></li>
-            <li><a href="/a5/build/HomeScreen/index.html">A5 - Challenge - HomeScreen</a></li>
-        </ul>
-
-
-        <!--
-          This HTML file is a template.
-          If you open it directly in the browser, you will see an empty page.
-
-          You can add webfonts, meta tags, or analytics to this file.
-          The build step will place the bundled scripts into the <body> tag.
-
-          To begin the development, run `npm start` or `yarn start`.
-          To create a production bundle, use `npm run build` or `yarn build`.
-        -->
-
+<body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
 </body>
 </html>
